修改 tabbar背景颜色
删除 多余的log页面

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   "tabBar": {
     "color": "#999999",
     "selectedColor": "#FF9326",
-    "backgroundColor": "white",
+    "backgroundColor": "#FFFFFF",
     "list": [
       {
         "pagePath": "pages/home/home",
