修改 界面样式
添加 首页日期控件
添加 全局表格样式
修改 全局标题栏样式
修改 首页内容显示逻辑
修改 首页教练信息布局
修改 首页时间表样式
删除 多余debug文件

--- a/app.json
+++ b/app.json
@@ -4,11 +4,10 @@
     "pages/mine/mine"
   ],
   "window": {
-        "navigationBarBackgroundColor": "#2b2e33",
-        "navigationBarTextStyle": "white",
+        "navigationBarBackgroundColor": "#FFF",
+        "navigationBarTextStyle": "black",
         "navigationBarTitleText": "阿甘学车教练端",
-        "backgroundColor": "#fff",
-        "backgroundTextStyle": "#dark"
+        "backgroundTextStyle": "black"
   },
   "tabBar": {
     "color": "#999999",
