创建 我的评价页面
添加 顶部头像、姓名等个人信息展示

--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/mine/mine",
-    "pages/home/home"
+    "pages/home/home",
+    "pages/mine/evaluation/evaluation"
   ],
   "window": {
     "navigationBarBackgroundColor": "#FFF",
