--- a/app.json
+++ b/app.json
@@ -6,14 +6,14 @@
     "pages/mine/evaluation/evaluation"
   ],
   "window": {
-    "navigationBarBackgroundColor": "#FFF",
-    "navigationBarTextStyle": "black",
+    "navigationBarBackgroundColor": "#e93737",
+    "navigationBarTextStyle": "white",
     "navigationBarTitleText": "阿甘教练",
-    "backgroundTextStyle": "black"
+    "backgroundTextStyle": "white"
   },
   "tabBar": {
     "color": "#999999",
-    "selectedColor": "#FF9326",
+    "selectedColor": "#e93737",
     "backgroundColor": "#FFFFFF",
     "list": [
       {
