--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
     "pages/web/web",
     "pages/me/personal/phone/phone",
     "pages/me/personal/phoneVerify/phoneVerify",
-    "pages/me/coach/coach"
+    "pages/me/coach/coach",
+    "pages/me/students/students"
   ],
   "window": {
     "backgroundTextStyle": "white",
